--- a/views/user/forgotpassword.ejs
+++ b/views/user/forgotpassword.ejs
@@ -572,15 +572,20 @@
                                         <div class="heading_s1">
                                             <h3 class="mb-30">Forgot password</h3>
                                         </div>
-                                        <form method="post" action="/forgotpassword">
+                                        <form method="post" onsubmit=" return validateform()" action="/forgotpassword">                                         
+                                            <p  style="color: red;">
+                                                <%if(message){%>
+                                            <%=message%>
+                                            <%}%>  
+                                            </p>
                                             <div class="form-group">
                                                 <input type="email" id="email" required="true" name="email"  placeholder="Your Email">
-                                            </div>                                            
+                                            </div>                                                                                      
                                             <div class="form-group">
                                                 <input type="password"  required="" name="password"  id="password" placeholder="enter password">
                                             </div>
                                             <div class="form-group">
-                                                <input type="text"  required="" name="rpassword"  id="rpassword" placeholder="re-enter password">
+                                                <input type="password"  required="" name="rpassword"  id="rpassword" placeholder="re-enter password">
                                             </div>
                                             <div class="form-group">
                                                 <button type="submit" class="btn btn-fill-out btn-block hover-up" name="login">OTP</button>
@@ -708,25 +713,43 @@
             </div>
         </div>
     </footer>
-<script>
-    // function verifyform()
-    // {
-    //     const email= document.getElementById("email").value;
-    //     $.ajax({
-    //         type: "GET", 
-    //         url: "/forgotpassword",  
-    //         data: { email },
-    //         success : function(res){
-    //             if(res.wemail)
-    //             {
-    //                 Swal.fire(
-    //                           'No User exist with this  email'
-    //                         );
-    //             }
-    //         }
-    //     })
-    // }
-</script>
+    <script>  
+        function validateform()
+        {        
+            let warning="";
+            const password = document.getElementById('password');
+            const repassword = document.getElementById('rpassword'); 
+
+                const passwordValue = password.value.trim();
+                const repasswordValue = repassword.value.trim();
+                const phonenoRegex = /^\d{10}$/;
+                const passwordRegex  = /^[a-zA-Z0-9!@#$%^&*]{6,16}$/;
+    
+            if(password.length<6){  
+            alert("Password must be at least 6 characters long.");  
+            document.getElementById('password').focus();
+            return false;  
+            } else if(passwordValue === '') {
+                document.getElementById('password').focus();
+
+            alert("Please enter password");
+                return false;
+            }
+            else if(!passwordValue.match(passwordRegex)){
+            alert("Please enter password minimum size 6 char");
+            document.getElementById('password').focus();
+
+                return false;
+            }else if(repasswordValue !== passwordValue){
+            alert("password fields not matching");
+            document.getElementById('password').focus();
+                return false;
+            }
+            alert("User data Succesfully submitted");
+            return  true;
+    
+        }  
+        </script> 
 
     <!-- Vendor JS-->
     <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script>
