--- a/views/user/forgotpasswordotp.ejs
+++ b/views/user/forgotpasswordotp.ejs
@@ -577,13 +577,13 @@
                                                 <input type="email" id="email" required="true" readonly value="<%=forgotdata.email%>" name="email"  placeholder="Your Email">
                                             </div>                                            
                                             <div class="form-group">
-                                                <input type="text"  required="" readonly name="password" value="<%=forgotdata.password%>" id="password" placeholder="enter password">
+                                                <input type="password"  required="" readonly name="password" value="<%=forgotdata.password%>" id="password" placeholder="enter password">
                                             </div>
                                             <div class="form-group">
                                                 <input type="text"  required="" name="otp"  id="otp" placeholder="otp">
                                             </div>
                                             <div class="form-group">
-                                                <button type="submit" class="btn btn-fill-out btn-block hover-up" name="login">OTP</button>
+                                                <button type="submit" class="btn btn-fill-out btn-block hover-up" name="login">Update Password</button>
                                             </div>
                                         </form>
                                     </div>
