--- a/views/user/userSearchitems.ejs
+++ b/views/user/userSearchitems.ejs
@@ -186,6 +186,7 @@
                             <input
                               type="text"
                               name="searchquery"
+                              value="<%=search%>"
                               placeholder="Search for medicines , supplements"
                             />
         
