--- a/views/user/usersignupwithOtp.ejs
+++ b/views/user/usersignupwithOtp.ejs
@@ -611,6 +611,9 @@
                                             <div class="form-group">
                                                 <input required="" type="text" id="otp"  name="otp" placeholder="Enter O T P">
                                             </div>
+                                            <%if(wrongotp== true){%>
+                                                <p style="color: red;">Wrong OTP</p>
+                                            <%}%>
                                             <div class="login_footer form-group">
                                                 <div class="chek-form">
                                                     <div class="custome-checkbox">
