--- a/views/admin/adminDashboard.ejs
+++ b/views/admin/adminDashboard.ejs
@@ -74,7 +74,7 @@
                     </div>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-link" href="page-blank.html"> <i class="icon material-icons md-local_offer"></i>
+                    <a class="menu-link" href="#"> <i class="icon material-icons md-local_offer"></i>
                         <span class="text"> Starter page </span>
                     </a>
                 </li>
@@ -155,7 +155,7 @@
                             <span class="icon icon-sm rounded-circle bg-primary-light"><i class="text-primary material-icons md-monetization_on"></i></span>
                             <div class="text">
                                 <h6 class="mb-1 card-title">Revenue</h6>
-                                <span>$00.0</span>
+                                <span>₹ <%=totalRevenue%></span>
                                 <span class="text-sm">
                                     Shipping fees are not included
                                 </span>
@@ -168,7 +168,7 @@
                         <article class="icontext">
                             <span class="icon icon-sm rounded-circle bg-success-light"><i class="text-success material-icons md-local_shipping"></i></span>
                             <div class="text">
-                                <h6 class="mb-1 card-title">Orders</h6> <span>0</span>
+                                <h6 class="mb-1 card-title">Orders</h6> <span><%=orderCount%></span>
                                 <span class="text-sm">
                                     Excluding orders in transit
                                 </span>
@@ -181,9 +181,9 @@
                         <article class="icontext">
                             <span class="icon icon-sm rounded-circle bg-warning-light"><i class="text-warning material-icons md-qr_code"></i></span>
                             <div class="text">
-                                <h6 class="mb-1 card-title">Products</h6> <span>15</span>
+                                <h6 class="mb-1 card-title">Products</h6> <span><%=productCount%></span>
                                 <span class="text-sm">
-                                    In 5 Categories
+                                    In <%=categoryCount%> Categories
                                 </span>
                             </div>
                         </article>
@@ -194,7 +194,7 @@
                         <article class="icontext">
                             <span class="icon icon-sm rounded-circle bg-info-light"><i class="text-info material-icons md-shopping_basket"></i></span>
                             <div class="text">
-                                <h6 class="mb-1 card-title">Monthly Earning</h6> <span>$0.00</span>
+                                <h6 class="mb-1 card-title">Monthly Earning</h6> <span>₹ <%=monthlyRevenue%></span>
                                 <span class="text-sm">
                                     Based in your local time.
                                 </span>
@@ -203,6 +203,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-xl-8 col-lg-12">
                     <div class="card mb-4">
@@ -213,164 +214,17 @@
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-12">
-
-                </div>
-            </div>
-            <div class="card mb-4">
-                <header class="card-header">
-                    <h4 class="card-title">Latest orders</h4>
-                    <div class="row align-items-center">
-                        <div class="col-md-3 col-12 me-auto mb-md-0 mb-3">
-                            <div class="custom_select">
-                                <select class="form-select select-nice">
-                                    <option selected>All Categories</option>
-                                    <option>Women's Clothing</option>
-                                    <option>Men's Clothing</option>
-                                    <option>Cellphones</option>
-                                    <option>Computer & Office</option>
-                                    <option>Consumer Electronics</option>
-                                    <option>Jewelry & Accessories</option>
-                                    <option>Home & Garden</option>
-                                    <option>Luggage & Bags</option>
-                                    <option>Shoes</option>
-                                    <option>Mother & Kids</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="col-md-2 col-6">
-                            <input type="date" value="02.05.2022" class="form-control">
-                        </div>
-                        <div class="col-md-2 col-6">
-                            <div class="custom_select">
-                                <select class="form-select select-nice">
-                                    <option selected>Status</option>
-                                    <option>All</option>
-                                    <option>Paid</option>
-                                    <option>Chargeback</option>
-                                    <option>Refund</option>
-                                </select>
-                            </div>
-                        </div>
+                    <div class="card mb-4">
+                        <article class="card-body">
+                            <h5 class="card-title">Products in Category</h5>
+                            <canvas id="myChart2" height="255"></canvas>
+                        </article>
                     </div>
-                </header>
-                <div class="card-body">
-                    <div class="table-responsive">
-                        <div class="table-responsive">
-                            <table class="table align-middle table-nowrap mb-0">
-                                <thead class="table-light">
-                                    <tr>
-                                        <th scope="col" class="text-center">
-                                            <div class="form-check align-middle">
-                                                <input class="form-check-input" type="checkbox" id="transactionCheck01">
-                                                <label class="form-check-label" for="transactionCheck01"></label>
-                                            </div>
-                                        </th>
-                                        <th class="align-middle" scope="col">Order ID</th>
-                                        <th class="align-middle" scope="col">Billing Name</th>
-                                        <th class="align-middle" scope="col">Date</th>
-                                        <th class="align-middle" scope="col">Total</th>
-                                        <th class="align-middle" scope="col">Payment Status</th>
-                                        <th class="align-middle" scope="col">Payment Method</th>
-                                        <th class="align-middle" scope="col">View Details</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td class="text-center">
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" id="transactionCheck02">
-                                                <label class="form-check-label" for="transactionCheck02"></label>
-                                            </div>
-                                        </td>
-                                        <td><a href="#" class="fw-bold">#SK2540</a> </td>
-                                        <td>Neal Matthews</td>
-                                        <td>
-                                            07 Oct, 2022
-                                        </td>
-                                        <td>
-                                            $400
-                                        </td>
-                                        <td>
-                                            <span class="badge badge-pill badge-soft-success">Paid</span>
-                                        </td>
-                                        <td>
-                                            <i class="material-icons md-payment font-xxl text-muted mr-5"></i> Mastercard
-                                        </td>
-                                        <td>
-                                            <a href="#" class="btn btn-xs"> View details</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="text-center">
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" id="transactionCheck03">
-                                                <label class="form-check-label" for="transactionCheck03"></label>
-                                            </div>
-                                        </td>
-                                        <td><a href="#" class="fw-bold">#SK2541</a> </td>
-                                        <td>Jamal Burnett</td>
-                                        <td>
-                                            07 Oct, 2022
-                                        </td>
-                                        <td>
-                                            $380
-                                        </td>
-                                        <td>
-                                            <span class="badge badge-pill badge-soft-danger">Chargeback</span>
-                                        </td>
-                                        <td>
-                                            <i class="material-icons md-payment font-xxl text-muted mr-5"></i> Visa
-                                        </td>
-                                        <td>
-                                            <a href="#" class="btn btn-xs"> View details</a>
-                                        </td>
-                                    </tr>
-
-
-                                    <tr>
-                                        <td class="text-center">
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" id="transactionCheck06">
-                                                <label class="form-check-label" for="transactionCheck06"></label>
-                                            </div>
-                                        </td>
-                                        <td><a href="#" class="fw-bold">#SK2544</a> </td>
-                                        <td>Ronald Taylor</td>
-                                        <td>
-                                            04 Oct, 2022
-                                        </td>
-                                        <td>
-                                            $404
-                                        </td>
-                                        <td>
-                                            <span class="badge badge-pill badge-soft-warning">Refund</span>
-                                        </td>
-                                        <td>
-                                            <i class="material-icons md-payment font-xxl text-muted mr-5"></i> Visa
-                                        </td>
-                                        <td>
-                                            <a href="#" class="btn btn-xs"> View details</a>
-                                        </td>
-                                    </tr>
-
-                                </tbody>
-                            </table>
-                        </div>
-                    </div> <!-- table-responsive end// -->
+                    
                 </div>
             </div>
-            <div class="pagination-area mt-30 mb-50">
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-start">
-                        <li class="page-item active"><a class="page-link" href="#">01</a></li>
-                        <li class="page-item"><a class="page-link" href="#">02</a></li>
-                        <li class="page-item"><a class="page-link" href="#">03</a></li>
-                        <li class="page-item"><a class="page-link dot" href="#">...</a></li>
-                        <li class="page-item"><a class="page-link" href="#">06</a></li>
-                        <li class="page-item"><a class="page-link" href="#"><i class="material-icons md-chevron_right"></i></a></li>
-                    </ul>
-                </nav>
-            </div>
+
+
         </section> <!-- content-main end// -->
         <footer class="main-footer font-xs">
             <div class="row pb-30 pt-15">
@@ -387,6 +241,90 @@
             </div>
         </footer>
     </main>
+    <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
+    </script>
+    <script>
+        const months = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'];
+        //alert('<%=graphDataSales%>')
+        const salesData = '<%=graphDataSales%>';
+        const myArray = salesData.split(',');
+        const numberArray = myArray.map(function (str) {
+        return parseFloat(str); 
+});
+
+        //alert(typeof(numberArray))
+        //console.log(numberArray);
+        
+        new Chart("myChart", {
+          type: "line",
+          data: {
+            labels: months,
+            datasets: [{ 
+              label: 'sales',
+              tension: 0.3,
+              data: numberArray,
+              backgroundColor: 'rgba(44, 120, 220, 0.2)',
+              borderColor: 'rgba(44, 120, 220)',
+              fill: true
+            }, { 
+                label: 'Products',
+                        tension: 0.3,
+                        fill: true,
+                        backgroundColor: 'rgba(380, 200, 230, 0.2)',
+                        borderColor: 'rgb(380, 200, 230)',
+                        data: [30, 10, 27, 19, 33, 15, 19, 20, 24, 15, 37, 6]
+            }]
+          },
+          options: {
+                plugins: {
+                legend: {
+                    labels: {
+                    usePointStyle: true,
+                    },
+                }
+                }
+            }
+        });
+        </script>
+        <script>
+           // alert('<%=categoryCounts%>')
+           // alert('<%=categoryNames%>')
+            const Cnames = '<%=categoryNames%>'
+            const cNamesArr = Cnames.split(',');
+            const cCounts = '<%=categoryCounts%>'
+            const myArray1 = cCounts.split(',');
+            const cCountsArr = myArray1.map(function (str) {
+        return parseFloat(str); // Use parseFloat() to convert a string to a number
+});
+            console.log(cCountsArr);
+
+            var xValues = cNamesArr;
+            var yValues = cCountsArr;
+            var barColors = [
+              "#b91d47",
+              "#00aba9",
+              "#2b5797",
+              "#e8c3b9",
+              "#1e7145",
+              "#51ee7b",
+              "#22344b",
+              "#f52327"
+            ];
+            
+            new Chart("myChart2", {
+              type: "pie",
+              data: {
+                labels: xValues,
+                datasets: [{
+                  backgroundColor: barColors,
+                  data: yValues
+                }]
+              },
+              options: {
+              }
+            });
+            </script>
     <script src="/assetsbackend/js/vendors/jquery-3.6.0.min.js"></script>
     <script src="/assetsbackend/js/vendors/bootstrap.bundle.min.js"></script>
     <script src="/assetsbackend/js/vendors/select2.min.js"></script>
@@ -395,7 +333,7 @@
     <script src="/assetsbackend/js/vendors/chart.js"></script>
     <!-- Main Script -->
     <script src="/assetsbackend/js/main.js" type="text/javascript"></script>
-    <script src="/assetsbackend/js/custom-chart.js" type="text/javascript"></script>
+    <!-- <script src="/assetsbackend/js/custom-chart.js" type="text/javascript"></script> -->
 </body>
 
 </html>
