--- a/views/user/userDashboard.ejs
+++ b/views/user/userDashboard.ejs
@@ -754,13 +754,19 @@
                                 <div class="dashboard-menu">
                                     <ul class="nav flex-column" role="tablist">
                                         <li class="nav-item">
-                                            <a class="nav-link" id="account-detail-tab" data-bs-toggle="tab" href="#account-detail" role="tab" aria-controls="account-detail" aria-selected="false"><i class="fi-rs-user mr-10"></i>Account details</a>
+                                            <a class="nav-link active" id="dashboard-tab" data-bs-toggle="tab" href="#dashboard" role="tab" aria-controls="dashboard" aria-selected="false"><i class="fi-rs-settings-sliders mr-10"></i>Dashboard</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link " id="orders-tab" data-bs-toggle="tab" href="#orders" role="tab" aria-controls="orders" aria-selected="false"><i class="fi-rs-shopping-bag mr-10"></i>Orders</a>
+                                            <a class="nav-link" id="orders-tab" data-bs-toggle="tab" href="#orders" role="tab" aria-controls="orders" aria-selected="false"><i class="fi-rs-shopping-bag mr-10"></i>Orders</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" id="address-tab" data-bs-toggle="tab" href="#address" role="tab" aria-controls="address" aria-selected="false"><i class="fi-rs-marker mr-10"></i>My Address</a>
+                                            <a class="nav-link" id="track-orders-tab" data-bs-toggle="tab" href="#track-orders" role="tab" aria-controls="track-orders" aria-selected="false"><i class="fi-rs-shopping-cart-check mr-10"></i>Wallet</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" id="address-tab" data-bs-toggle="tab" href="#address" role="tab" aria-controls="address" aria-selected="true"><i class="fi-rs-marker mr-10"></i>My Address</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" id="account-detail-tab" data-bs-toggle="tab" href="#account-detail" role="tab" aria-controls="account-detail" aria-selected="true"><i class="fi-rs-user mr-10"></i>Account details</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="/userlogout"><i class="fi-rs-sign-out mr-10"></i>Logout</a>
@@ -768,10 +774,19 @@
                                     </ul>
                                 </div>
                             </div>
-
                             <div class="col-md-8">
                                 <div class="tab-content dashboard-content">
-                                    <div class="tab-pane fade active "  id="orders" role="tabpanel" aria-labelledby="orders-tab">
+                                    <div class="tab-pane fade active show" id="dashboard" role="tabpanel" aria-labelledby="dashboard-tab">
+                                        <div class="card">
+                                            <div class="card-header">
+                                                <h5 class="mb-0">Hello,  <%=user.name%> </h5>
+                                            </div>
+                                            <div class="card-body">
+                                                <p>From your account dashboard. you can easily check &amp; view your recent orders, manage you shipping and billing addresses an edit your password and account details.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="tab-pane fade" id="orders" role="tabpanel" aria-labelledby="orders-tab">
                                         <div class="card">
                                             <div class="card-header">
                                                 <h5 class="mb-0">Your Orders</h5>
@@ -809,31 +824,50 @@
                                     <div class="tab-pane fade" id="track-orders" role="tabpanel" aria-labelledby="track-orders-tab">
                                         <div class="card">
                                             <div class="card-header">
-                                                <h5 class="mb-0">Orders tracking</h5>
+                                                <h5 class="mb-0">Your Wallet</h5>
                                             </div>
-                                            <div class="card-body contact-from-area">
-                                                <p>To track your order please enter your OrderID in the box below and press "Track" button. This was given to you on your 
-                                                    receipt and in the confirmation email you should have received.</p>
-                                                <div class="row">
-                                                    <div class="col-lg-8">
-                                                        <form class="contact-form-style mt-30 mb-50" action="#" method="post">
-                                                            <div class="input-style mb-20">
-                                                                <label>Order ID</label>
-                                                                <input name="order-id" placeholder="Found in your order confirmation email" type="text" class="square">
-                                                            </div>
-                                                            <div class="input-style mb-20">
-                                                                <label>Billing email</label>
-                                                                <input name="billing-email" placeholder="Email you used during checkout" type="email" class="square">
-                                                            </div>
-                                                            <button class="submit submit-auto-width" type="submit">Track</button>
-                                                        </form>
-                                                    </div>
+                                            <div class="card-body">
+                                                <div class="table-responsive">
+                                                    <table class="table">
+                                                        <thead>
+                                                            <tr>
+                                                                <th>Order Id</th>
+                                                                <th>Date</th>
+                                                                <th>Transaction type</th>
+                                                                <th>Amount</th>
+                                                                <th>Remarks</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+
+                                                            <% for(let i=user.wallet.length-1;i>=0;i--) {  %>
+                                                                <tr>
+                                                                    <td><%=String(user.wallet[i]._id).slice(-6)%></td>
+                                                                    <td><%= String(user.wallet[i].createdOn).slice(4, 16) %></td>
+                                                                    <td><%=user.wallet[i].transactionType%></td>
+                                                                    <td><%=user.wallet[i].amount%> </td>
+                                                                    <td><%=user.wallet[i].remarks%></td>
+                                                                </tr>
+                                                                <% } %>
+
+                                                            <!-- <%for(let i=0;i<wallet.length;i++){%>
+                                                                <tr>
+                                                                    <td> <a href="/orderdetails?ordid=<%=wallet[i].orderId%>" class="btn-small d-block">ODR-<%=String(wallet[i].orderId).slice(-10)%></a></td>
+                                                                    <td><%= String(wallet[i].createdAt).slice(4, 16) %></td>
+                                                                    <td><%=user.wallet[i].transactionType%></td>
+                                                                    <td>₹ <%=wallet[i].amount%> </td>
+                                                                    <td><%=wallet[i].remarks%></td>
+                                                                </tr>
+                                                            <% } %> -->
+                                                        </tbody>
+                                                    </table>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="tab-pane fade " id="address" role="tabpanel" aria-labelledby="address-tab">
-                                       <tr> <a class="btn btn-fill-out submit btn-medium mb-4 " href="/addaddress">
+                                        <tr> 
+                                        <a class="btn btn-fill-out submit btn-medium mb-4 " href="/addaddress">
                                         Add Address
                                         </a>
                                         </tr>
@@ -861,8 +895,7 @@
                                                 <%}%>
                                             </div>
                                     </div>
-                                </div>
-                                    <div class="tab-pane fade " id="account-detail" role="tabpanel" aria-labelledby="account-detail-tab">
+                                    <div class="tab-pane fade" id="account-detail" role="tabpanel" aria-labelledby="account-detail-tab">
                                         <div class="card">
                                             <div class="card-header">
                                                 <h5>Account Details</h5>
@@ -894,7 +927,6 @@
                                             </div>
                                         </div>
                                     </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -902,6 +934,7 @@
                 </div>
             </div>
         </section>
+
     </main>
 
     <!-- Vendor JS-->
