--- a/views/user/userSignin.ejs
+++ b/views/user/userSignin.ejs
@@ -579,13 +579,12 @@
                                             <div class="form-group">
                                                 <input required="" value="456456" type="password" name="password" placeholder="Password">
                                             </div>
-                                            <div class="login_footer form-group">
-                                                <div class="chek-form">
-                                                    <div class="custome-checkbox">
-                                                        <input class="form-check-input" type="checkbox" name="checkbox" id="exampleCheckbox1" value="">
-                                                        <label class="form-check-label" for="exampleCheckbox1"><span>Remember me</span></label>
-                                                    </div>
-                                                </div>
+                                            <%if(message){%>
+                                                <p style="color: red;">
+                                                Wrong credentials !!
+                                                </p>
+                                                <%}%>
+                                            <div style="justify-content: end;" class="login_footer form-group">
                                                 <a class="text-muted" href="/forgotpassword">Forgot password?</a>
                                             </div>
                                             <div class="form-group">
