--- a/views/user/checkoutcart.ejs
+++ b/views/user/checkoutcart.ejs
@@ -716,9 +716,160 @@
     <!-- Template  JS -->
     <script src="./assets/js/main.js?v=3.4"></script>
     <script src="./assets/js/shop.js?v=3.4"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
-    <script>
+ <script>
+    //apply coupon
+    function couponApply(){
+        // alert('hi')
+        event.preventDefault();
+        const coupon = document.getElementById('coupon').value
+        const total = document.getElementById('total1').value
+        // alert(coupon)
+        // alert(total)
+        $.ajax({
+            url: '/apply-coupon',
+            method: 'post',
+            data: {
+                coupon,
+                total
+            },
+            success: function(res){
+                // alert(res.coupon.couponName)
+                // alert(res.newTotal)
+                // alert(res.discount)
+                // alert(res.newTotal)
+
+                document.getElementById('couponDiscount').innerHTML = res.discount
+                document.getElementById('total').innerHTML = res.newTotal
+            }
+        })
+    }
+
+    $(document).ready(function(){
+        $('#checkoutform').submit(function(e){
+            e.preventDefault()
+            var formData = $(this).serialize();
+            $.ajax({
+                method: 'POST',
+                url: '/checkout',
+                data : formData,
+                success : function(res) {
+                    if(res.lowWalletBalance){
+                        Swal.fire(
+                            'Oops!',
+                            'Insufficient balance in wallet!',
+                            'warning'
+                            )
+                    }
+                     if(res.success){
+                        var options = {
+                            "key":""+res.key_id+"",
+                            "amount" : ""+res.amount+"",
+                            "currency" : "INR",
+                            "order_id" : ""+res.order_id+"",
+                            "receipt" : ""+res.receipt+"",
+                            
+                            "handler":function(response){
+                                // alert(res.reciept)
+                                // alert("payment success")
+                                verifyPayment(response, res.order_id ,res.reciept)
+                                // window.open("/order-success", "_self")
+
+                            },
+                            "prefill" : {
+                                "contact" : ""+res.contact+"",
+                                "name" : ""+res.name+"",
+                                "email" : ""+res.email+""
+                            },
+                            "theme" : {
+                                "color" : "#2300a3"
+                            }
+                        }
+                        var razorpayObj = new Razorpay(options);
+                        razorpayObj.on('payment.failed', function(response){
+                            // alert("payment failed")
+                        })
+                        razorpayObj.open();
+                    }else{
+                        // alert(res.msg)
+                    }
+                    if (res.status) {
+                        Swal.fire({
+                        title: 'Order Placed Successfully!',
+                        text: 'View your orders',
+                        icon: 'success',
+                        showConfirmButton: true,
+                        confirmButtonText: "View order"
+                    }).then(function () {
+                        window.open("/ordersuccess?ordid="+res.ordid, "_self");
+
+                    })                        } 
+                }
+            })
+        })
+    })
+
+    function verifyPayment(payment, order, orderId) {
+            $.ajax({
+                url: '/verifypayment',
+                method: 'post',
+                data: {
+                    payment,
+                    order,
+                    orderId
+                },
+                success: function () {
+                    // alert('success')
+
+                    Swal.fire({
+                        title: 'Order Placed Successfully!',
+                        text: 'View your orders',
+                        icon: 'success',
+                        showConfirmButton: true,
+                        confirmButtonText: "View order"
+                    }).then(function () {
+                        window.open("/ordersuccess?ordid="+res.ordid, "_self");
+                    })
+                }
+            })
+        }
+  </script>
+
+
+
+    <!-- <script>
+    function couponApply(){
+        // alert('hi')
+        event.preventDefault();
+        const coupon = document.getElementById('coupon').value
+        const total = document.getElementById('total1').value
+        // alert(coupon)
+        // alert(total)
+        $.ajax({
+            url: '/apply-coupon',
+            method: 'post',
+            data: {
+                coupon,
+                total
+            },
+            success: function(res){
+                // alert(res.coupon.couponName)
+                // alert(res.newTotal)
+                // alert(res.discount)
+                // alert(res.newTotal)
+
+                document.getElementById('couponDiscount').innerHTML = res.discount
+                document.getElementById('total').innerHTML = res.newTotal
+            }
+        })
+    };
+
+
+
+
 
     $(document).ready(function () 
     {                 
@@ -732,7 +883,7 @@
                 $.ajax
                 ({
                     method: 'POST',
-                    url: '/codcheckout',
+                    url: '/checkout',
                     data: formData, 
                     success : function(res)
                     {
@@ -770,9 +921,17 @@
                     }
                     if (res.status) 
                     {
+                        Swal.fire({
+                        title: 'Order Placed Successfully!',
+                        text: 'View your orders',
+                        icon: 'success',
+                        showConfirmButton: true,
+                        confirmButtonText: "View order"
+                    }).then(function () {
                         console.log(res.ordid);
-                            window.open("/ordersuccess?ordid="+res.ordid, "_self")
-                    } 
+                            window.open("/ordersuccess?ordid="+res.ordid, "_self");
+                    })  
+ } 
                     }
                 });
             });
@@ -802,7 +961,7 @@
                 }
             })
         }
-    </script>
+    </script> -->
 
 </body>
 
