--- a/views/user/userCategoryproducts.ejs
+++ b/views/user/userCategoryproducts.ejs
@@ -179,11 +179,12 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-6">
-                      <div class="search-style-2">
-                        <form action="#">
+                    <div style="border-style: solid; border-color: black; border-radius: 10px;" class="col-6">
+                      <div class="search-style-2" >
+                        <form action="/searchproduct">
                           <input
                             type="text"
+                            name="searchquery"
                             placeholder="Search for medicines , supplements"
                           />
                         </form>
