--- a/views/user/userWishlist.ejs
+++ b/views/user/userWishlist.ejs
@@ -49,8 +49,8 @@
                                     <div class="header-action-2">
                                         <div class="header-action-icon-2">
                                             <a href="/userCart">
-                                                <img class="svgInject" alt="Evara" src="assets/imgs/theme/icons/icon-heart.svg">
-                                                <span class="pro-count blue"></span>
+                                                <img class="svgInject" alt="Evara" src="assets/imgs/theme/icons/icon-cart.svg">
+                                                <span class="pro-count blue"><%=user.cart.length%></span>
                                             </a>
                                         </div>
 <!-- dumb elements -->
