--- a/views/admin/addCoupons.ejs
+++ b/views/admin/addCoupons.ejs
@@ -30,7 +30,7 @@
         </div>
         <nav>
             <ul class="menu-aside">
-                <li class="menu-item ">
+                <li class="menu-item">
                     <a class="menu-link" href="/admin/adminDashboard"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
@@ -40,12 +40,12 @@
                         <span class="text">User Management</span>
                     </a>
                 </li>
-                <li class="menu-item active">
+                <li class="menu-item ">
                     <a class="menu-link" href="/admin/categorymanagement"> <i class="icon material-icons md-add_box"></i>
                         <span class="text">Category Management</span>
                     </a>
                 </li>
-                <li class="menu-item ">
+                <li class="menu-item active">
                     <a class="menu-link" href="/admin/productmanagement"> <i class="icon material-icons md-shopping_bag"></i>
                         <span class="text">Product Management</span>
                     </a>
@@ -55,9 +55,12 @@
                         <span class="text">Orders</span>
                     </a>
                 </li>
+            </ul>
+            <hr>
+            <ul class="menu-aside">
                 <li class="menu-item">
-                    <a class="menu-link" disabled href="/admin/couponmanagement"> <i class="icon material-icons md-pie_chart"></i>
-                        <span class="text">Coupon Management</span>
+                    <a class="menu-link" href="page-blank.html"> <i class="icon material-icons md-local_offer"></i>
+                        <span class="text"> Starter page </span>
                     </a>
                 </li>
             </ul>
@@ -114,52 +117,65 @@
                             <a class="dropdown-item" href="#"><i class="material-icons md-receipt"></i>Billing</a>
                             <a class="dropdown-item" href="#"><i class="material-icons md-help_outline"></i>Help center</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item text-danger" href="#"><i class="material-icons md-exit_to_app"></i>Logout</a>
+                            <a class="dropdown-item text-danger" href="/admin/logout"><i class="material-icons md-exit_to_app"></i>Logout</a>
                         </div>
                     </li>
                 </ul>
             </div>
         </header>
-        <section class="content-main">
             <section class="content-main">
-                <div class="content-header">
-                    <div>
-                        <h2 class="content-title card-title">Category Management </h2>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row">   
-                            <form method="post" action="/admin/addnewCategories" enctype="multipart/form-data">
-                                <div class="row">
-                                    <div class="form-group col-md-6">
-                                        <label>category Name <span class="required">*</span></label>
-                                        <input required="true"  class="form-control square" id="name" name="name" type="text">
-                                    </div>
-                                    <div class="form-group col-md-12">
-                                        <label>Description <span class="required">*</span></label>
-                                        <input required="true"   class="form-control square" id="description" name="description" type="text">
-                                    </div>
-                                    <div class="mb-4">
-                                        <label class="form-label">isListed</label>
-                                        <select class="form-select" name="isListed">
-                                            <option value="true">Yes</option>
-                                              <option value="false">No</option>
-                                        </select>
-                                    </div>
-                                    <div class="input-upload">
-                                            <img src="/assetsbackend/assets/imgs/theme/upload.svg" alt="">
-                                            <input required="true" name="image" type="file" class="form-control" type="file">
+                <section class="content-main">
+                    <div class="row">
+                        <div class="col-9">
+                            <div class="content-header">
+                                <h2 class="content-title">Add New Coupon</h2>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="card mb-4">
+                                <div class="card-body">
+                                    <form action="/admin/addcoupon" method="post">
+                                        <div class="mb-4">
+                                            <label for="coupon_name" class="form-label">Coupon title</label>
+                                            <input type="text" name="couponName" placeholder="Type here" class="form-control" id="product_title">
                                         </div>
-                                    <div class="col-md-12">
-                                        <button type="submit" class="btn btn-danger mt-3 submit" name="submit" value="Submit">Add Category</button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div> <!-- .row // -->
-                    </div> <!-- card body .// -->
-                </div> <!-- card .// -->
-        </section> <!-- content-main end// -->
+                                        <div class="row">
+                                            <div class="col-md-3 mb-4">
+                                                <label for="discount" class="form-label">Discount%</label>
+                                                <input type="text" name="discount" placeholder="Type here" class="form-control" id="discount">
+                                            </div>
+                                            <div class="col-md-3 mb-4">
+                                                <label for="maxDiscount" class="form-label">Max Discount</label>
+                                                <input type="text" name="maxDiscount" placeholder="Type here" class="form-control" id="maxDiscount">
+                                            </div>
+                                            <div class="col-md-3 mb-4">
+                                                <label class="form-label">isListed</label>
+                                                <select class="form-select" name="isListed">
+                                                    <option value="true">Yes</option>
+                                                    <option value="false">No</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-md-3 mb-4">
+                                                <label for="minAmt" class="form-label">Min order price</label>
+                                                <input type="text" name="minAmt" placeholder="Type here" class="form-control" id="MinAmt">
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <button type="submit" class="btn btn-md rounded font-sm hover-up">Publish</button>
+                                        </div>
+                                    </form>
+                                    
+                             </div> <!-- card end// -->
+                         <!-- card end// -->
+                        </div>
+        </section>
+        
+            </section>
+
+
+
+
+        </section>
         <footer class="main-footer font-xs">
             <div class="row pb-30 pt-15">
                 <div class="col-sm-6">
