--- a/views/admin/adminCategorymanagement.ejs
+++ b/views/admin/adminCategorymanagement.ejs
@@ -55,6 +55,11 @@
                         <span class="text">Orders</span>
                     </a>
                 </li>
+                <li class="menu-item">
+                    <a class="menu-link" disabled href="/admin/couponmanagement"> <i class="icon material-icons md-pie_chart"></i>
+                        <span class="text">Coupon Management</span>
+                    </a>
+                </li>
             </ul>
             <hr>
             <ul class="menu-aside">
