--- a/views/admin/adminOrderdetails.ejs
+++ b/views/admin/adminOrderdetails.ejs
@@ -57,6 +57,13 @@
                         <span class="text">Orders</span>
                     </a>
                 </li>
+                <li class="menu-item">
+                    <a class="menu-link" disabled href="/admin/couponmanagement"> <i class="icon material-icons md-pie_chart"></i>
+                        <span class="text">Coupon Management</span>
+                    </a>
+                </li>
+
+                
             </ul>
             <br>
             <br>
