--- a/views/admin/adminOrderview.ejs
+++ b/views/admin/adminOrderview.ejs
@@ -56,6 +56,12 @@
                         <span class="text">Orders</span>
                     </a>
                 </li>
+                <li class="menu-item">
+                    <a class="menu-link" disabled href="/admin/couponmanagement"> <i class="icon material-icons md-pie_chart"></i>
+                        <span class="text">Coupon Management</span>
+                    </a>
+                </li>
+
             </ul>
             <br>
             <br>
