--- a/views/admin/couponManagement.ejs
+++ b/views/admin/couponManagement.ejs
@@ -30,7 +30,7 @@
         </div>
         <nav>
             <ul class="menu-aside">
-                <li class="menu-item active">
+                <li class="menu-item">
                     <a class="menu-link" href="/admin/adminDashboard"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
@@ -40,12 +40,12 @@
                         <span class="text">User Management</span>
                     </a>
                 </li>
-                <li class="menu-item">
+                <li class="menu-item ">
                     <a class="menu-link" href="/admin/categorymanagement"> <i class="icon material-icons md-add_box"></i>
                         <span class="text">Category Management</span>
                     </a>
                 </li>
-                <li class="menu-item ">
+                <li class="menu-item active">
                     <a class="menu-link" href="/admin/productmanagement"> <i class="icon material-icons md-shopping_bag"></i>
                         <span class="text">Product Management</span>
                     </a>
@@ -55,26 +55,16 @@
                         <span class="text">Orders</span>
                     </a>
                 </li>
-
                 <li class="menu-item">
                     <a class="menu-link" disabled href="/admin/couponmanagement"> <i class="icon material-icons md-pie_chart"></i>
                         <span class="text">Coupon Management</span>
                     </a>
                 </li>
-            </ul>   
+            </ul>
             <hr>
             <ul class="menu-aside">
-                <li class="menu-item has-submenu">
-                    <a class="menu-link" href="#"> <i class="icon material-icons md-settings"></i>
-                        <span class="text">Settings</span>
-                    </a>
-                    <div class="submenu">
-                        <a href="page-settings-1.html">Setting sample 1</a>
-                        <a href="page-settings-2.html">Setting sample 2</a>
-                    </div>
-                </li>
                 <li class="menu-item">
-                    <a class="menu-link" href="#"> <i class="icon material-icons md-local_offer"></i>
+                    <a class="menu-link" href="page-blank.html"> <i class="icon material-icons md-local_offer"></i>
                         <span class="text"> Starter page </span>
                     </a>
                 </li>
@@ -139,93 +129,66 @@
             </div>
         </header>
         <section class="content-main">
-            <div class="content-header">
-                <div>
-                    <h2 class="content-title card-title">Dashboard </h2>
-                    <p>Whole data about your business here</p>
-                </div>
-                <div>
-                    <a href="/admin/createreport" class="btn btn-primary"><i class="text-muted material-icons md-post_add"></i>Create report</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="card card-body mb-4">
-                        <article class="icontext">
-                            <span class="icon icon-sm rounded-circle bg-primary-light"><i class="text-primary material-icons md-monetization_on"></i></span>
-                            <div class="text">
-                                <h6 class="mb-1 card-title">Revenue</h6>
-                                <span>₹ <%=totalRevenue%></span>
-                                <span class="text-sm">
-                                    Shipping fees are not included
-                                </span>
-                            </div>
-                        </article>
+            <section class="content-main">
+                <div class="content-header">
+                    <div>
+                        <h2 class="content-title card-title">Coupons</h2>
+                    </div>
+                    <div>
+                        <a href="/admin/addcoupon" class="btn btn-primary btn-sm rounded">Create new</a>
                     </div>
                 </div>
-                <div class="col-lg-3">
-                    <div class="card card-body mb-4">
-                        <article class="icontext">
-                            <span class="icon icon-sm rounded-circle bg-success-light"><i class="text-success material-icons md-local_shipping"></i></span>
-                            <div class="text">
-                                <h6 class="mb-1 card-title">Orders</h6> <span><%=orderCount%></span>
-                                <span class="text-sm">
-                                    Excluding orders in transit
-                                </span>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="card card-body mb-4">
-                        <article class="icontext">
-                            <span class="icon icon-sm rounded-circle bg-warning-light"><i class="text-warning material-icons md-qr_code"></i></span>
-                            <div class="text">
-                                <h6 class="mb-1 card-title">Products</h6> <span><%=productCount%></span>
-                                <span class="text-sm">
-                                    In <%=categoryCount%> Categories
-                                </span>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="card card-body mb-4">
-                        <article class="icontext">
-                            <span class="icon icon-sm rounded-circle bg-info-light"><i class="text-info material-icons md-shopping_basket"></i></span>
-                            <div class="text">
-                                <h6 class="mb-1 card-title">Monthly Earning</h6> <span>₹ <%=monthlyRevenue%></span>
-                                <span class="text-sm">
-                                    Based in your local time.
-                                </span>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-xl-8 col-lg-12">
-                    <div class="card mb-4">
-                        <article class="card-body">
-                            <h5 class="card-title">Sale statistics</h5>
-                            <canvas id="myChart" height="120px"></canvas>
-                        </article>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-12">
-                    <div class="card mb-4">
-                        <article class="card-body">
-                            <h5 class="card-title">Products in Category</h5>
-                            <canvas id="myChart2" height="255"></canvas>
-                        </article>
-                    </div>
-                    
-                </div>
-            </div>
+                <div class="card mb-4">
+                   
+                    <div class="card-body">
+                        <article class="itemlist">
+                            <table class="table table-hover" id="dataTable">
+                                <thead>
+                                    <tr>
+                                    <th scope="col">id</th>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Discount %</th>
+                                    <th scope="col">isListed</th>
+                                    <th scope="col">Min Order Price</th>
+                                    <th scope="col">Max Discount</th>
+                                    <th scope="col">Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                    <%for(let i=0;i<coupons.length;i++) {%>
+                                        <tr>
+                                          <td><%= i+1 %></td>
+                                          <td><%= coupons[i].couponName %></td>
+                                          <td><%= coupons[i].discount %></td>
+                                          <td><%= coupons[i].isListed %></td>
+                                          <td><%= coupons[i].minAmt %></td>
+                                          <td><%= coupons[i].maxDiscount%></td>
+                                          <td> <div class="d-flex">
+                                            <div class="d-flex">
+                                             <div class="user-container" data-coupon-id="<%= coupons[i]?._id %>">
+                                                    <a type="button" onclick="coupontatus('<%= coupons[i]?._id %>', 'coupontatusText<%= i %>')" class="btn-sm btn-danger">
+                                                        <span id="coupontatusText<%= i %>">
+                                                            <% if (coupons[i]?.isListed) { %>
+                                                                Listed
+                                                            <% } else { %>
+                                                                UnListed
+                                                            <% } %>
+                                                        </span>
+                                                    </a>
+                                                </div>
+                                            </div>                                         
+                                        </tr>
+                                        <% } %>
+                              </table>
+                        </article> <!-- itemlist  .// -->
+                    </div> <!-- card-body end// -->
+                </div> <!-- card end// -->
+            </section>
 
 
-        </section> <!-- content-main end// -->
+
+
+        </section>
         <footer class="main-footer font-xs">
             <div class="row pb-30 pt-15">
                 <div class="col-sm-6">
@@ -241,90 +204,6 @@
             </div>
         </footer>
     </main>
-    <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
-    </script>
-    <script>
-        const months = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'];
-        //alert('<%=graphDataSales%>')
-        const salesData = '<%=graphDataSales%>';
-        const myArray = salesData.split(',');
-        const numberArray = myArray.map(function (str) {
-        return parseFloat(str); 
-});
-
-        //alert(typeof(numberArray))
-        //console.log(numberArray);
-        
-        new Chart("myChart", {
-          type: "line",
-          data: {
-            labels: months,
-            datasets: [{ 
-              label: 'sales',
-              tension: 0.3,
-              data: numberArray,
-              backgroundColor: 'rgba(44, 120, 220, 0.2)',
-              borderColor: 'rgba(44, 120, 220)',
-              fill: true
-            }, { 
-                label: 'Products',
-                        tension: 0.3,
-                        fill: true,
-                        backgroundColor: 'rgba(380, 200, 230, 0.2)',
-                        borderColor: 'rgb(380, 200, 230)',
-                        data: [30, 10, 27, 19, 33, 15, 19, 20, 24, 15, 37, 6]
-            }]
-          },
-          options: {
-                plugins: {
-                legend: {
-                    labels: {
-                    usePointStyle: true,
-                    },
-                }
-                }
-            }
-        });
-        </script>
-        <script>
-           // alert('<%=categoryCounts%>')
-           // alert('<%=categoryNames%>')
-            const Cnames = '<%=categoryNames%>'
-            const cNamesArr = Cnames.split(',');
-            const cCounts = '<%=categoryCounts%>'
-            const myArray1 = cCounts.split(',');
-            const cCountsArr = myArray1.map(function (str) {
-        return parseFloat(str); // Use parseFloat() to convert a string to a number
-});
-            console.log(cCountsArr);
-
-            var xValues = cNamesArr;
-            var yValues = cCountsArr;
-            var barColors = [
-              "#b91d47",
-              "#00aba9",
-              "#2b5797",
-              "#e8c3b9",
-              "#1e7145",
-              "#51ee7b",
-              "#22344b",
-              "#f52327"
-            ];
-            
-            new Chart("myChart2", {
-              type: "pie",
-              data: {
-                labels: xValues,
-                datasets: [{
-                  backgroundColor: barColors,
-                  data: yValues
-                }]
-              },
-              options: {
-              }
-            });
-            </script>
     <script src="/assetsbackend/js/vendors/jquery-3.6.0.min.js"></script>
     <script src="/assetsbackend/js/vendors/bootstrap.bundle.min.js"></script>
     <script src="/assetsbackend/js/vendors/select2.min.js"></script>
@@ -333,7 +212,7 @@
     <script src="/assetsbackend/js/vendors/chart.js"></script>
     <!-- Main Script -->
     <script src="/assetsbackend/js/main.js" type="text/javascript"></script>
-    <!-- <script src="/assetsbackend/js/custom-chart.js" type="text/javascript"></script> -->
+    <script src="/assetsbackend/js/custom-chart.js" type="text/javascript"></script>
 </body>
 
 </html>
